--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 			<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="status-bar cf">
+		<div class="hide status-bar cf">
 			<div class="left_col"><span id="gift-total">$0.00</span></div>
 		</div>
 
