--- a/app/index.html
+++ b/app/index.html
@@ -6,97 +6,154 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title></title>
+		<title>InvestInUsly.io • We Love Your Money</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="styles/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<!--[if lt IE 7]>
 			<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="hide status-bar cf">
-			<div class="left_col"><span id="gift-total">$0.00</span></div>
-		</div>
+		<section class="big-section guy-bike">
+			<h1 class="big-section-title"><strong>Invest</strong>InUsly.io</h1>
+			<h2 class="sub-title">Angel investment for the next lean mobile cloud startup from San Francisco</h2>
 
-		<div id="gift-app">
-			<form class="gift-app-form" action="https://www.paypal.com/cgi-bin/webscr" method="POST">
-				<div id="component-wrapper"></div>
+			<div class="layover">
+				<p class="layover-text centered">Join hundreds of other young, good-looking people and invest in us!</p>
+				<img src="img/faces/face1.jpg">
+				<img src="img/faces/face3.jpg">
+				<img src="img/faces/face4.jpg">
+				<img src="img/faces/face6.jpg">
+				<img src="img/faces/face7.jpg"> 
+				<img src="img/faces/face8.jpg">
+				<img src="img/faces/face9.jpg">
+				<img src="img/faces/face10.jpg">
+				<img src="img/faces/face11.jpg">
+				<img src="img/faces/face13.jpg">
+				<img src="img/faces/face14.jpg">
+				<img src="img/faces/face15.jpg">	
+			</div>
 
-				<hr class="stylish" />
-
-				<div class="action-bar">
-					<input type="button" value="Add another designation" class="btn btn-success designation-add" /> 
-					<span class="spacer">|</span>
-					<input type="submit" value="Donate now" class="btn btn-primary gift-submit" />
+			<div class="row snippet-row">
+				<div class="col-md-4">
+					<div class="snippet-box">
+						<img class="face-circle" src="img/faces/face2.jpg">
+						<div class="snippet-text">
+							<blockquote>My investments with InvestInUsly.io were multiplied beyond measure. And that's the great thing: I didn't ever have to measure them!</blockquote>
+						</div>
+					</div>
 				</div>
+
+				<div class="col-md-4">
+					<div class="snippet-box">
+						<img class="face-circle" src="img/faces/face5.jpg">
+						<blockquote class="snippet-text">Requirements doc? What is this? 2004. Take your Web2.0 back to Geocities and watch out: InvestInUsly.io turns money into ideas!</blockquote>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="snippet-box">
+						<img class="face-circle" src="img/faces/face12.jpg">
+						<blockquote class="snippet-text">I've never felt safer investing my money in startup. InvestInUsly.io seemed to sweep the Internet by storm!</blockquote>
+					</div>					
+				</div>
+			</div>
+		</section>
+
+		<section class="big-section section-blue">
+			<div class="body-content">
+				<h3 class="section-title"><strong>Donate</strong>Now</h3>
+				<p>There's a twist! You tell us how you want your money spent. We're a startup so we know that failing a lot will help us learn.</p>
 				
-				<!-- PayPal variables -->
-				<input type="hidden" name="cmd" value="_donations">
-				<input type="hidden" name="business" value="riverwoodcommunitychurch@gmail.com">
-				<input type="hidden" name="currency_code" value="USD">
-				<input type="hidden" name="item_name" value="Gift">
-				<input type="hidden" name="amount" value="0.00">
-				<input type="hidden" name="return" value="http://riverwoodcommunitychurch.org/thanks">
-				<input type="hidden" name="upload" value="1">
-			</form>
-		</div>
+				<div class="action-bar" id="control-bar">
+					<button class="btn designation-add">Add more money</button>
+					<button class="btn btn-success gift-submit">Donate now</button>
+					<span id="gift-total">$0.00</span> ready to donate.
+				</div>
+
+				<div id="investment-list"></div>
+				</div>
+			</div>
+		</section>
+
+		<footer class="big-section section-black">
+			<section class="container">
+				<section class="row">
+					<div class="col-md-3">
+						<h3 class="section-title">Get<strong>Acquainted</strong></h3>
+						<ul>
+							<li><a href="#">About Us</a></li>
+							<li><a href="#">How We Spend Your Money</a></li>
+							<li><a href="#">Blog About Spending Your Money</a></li>
+							<li><a href="#">Our Wacky Flat Company</a></li>
+						</ul>
+					</div>
+					<div class="col-md-3">
+						<h3 class="section-title">Super<strong>Social</strong></h3>
+						<ul>
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Google+</a></li>
+							<li><a href="#">YouTube</a></li>
+							<li><a href="#">MySpace</a></li>
+						</ul>
+					</div>
+					<div class="col-md-6">
+						<h3 class="section-title">Hear Us <strong>Shout!</strong></h3>
+						<form>
+							<p>We'll shout from the rooftops when we get fully funded. Literally. Enter the address of a building and we'll do it.</p>
+							<div class="form-group">
+								<label>Email address</label>
+								<input type="email" class="form-control" placeholder="Your email">
+							</div>
+							<div class="form-group">
+								<label>Rooftop shout location</label>
+								<input type="text" class="form-control" placeholder="Your building">
+							</div>
+							<input class="btn btn-primary" type="submit">
+						</form>
+					</div>
+				</section>
+			</section>
+			
+			<p class="copyright muted centered">(c) 2014 InvestInUsly.io</p>
+		</footer>
 
 		<!-- build:js scripts/main.js -->
 		<script data-main="scripts/main" src="components/requirejs/require.js"></script>
 		<!-- endbuild -->
 
-		<script type="text/template" id="tpl-designation-component">
-			<div class="span4 amount">
-				<label class="input-help">Enter how much you wish to give</label>
-				<div class="input-prepend">
-					<span class="add-on">$</span>
-					<input type="text" class="designation-amount" placeholder="Amount" value="<%= designation.amount > 0 ? designation.amount : '' %>" />
+		<script type="text/template" id="tpl-investment-box">
+			<div class="row">
+				<div class="col-md-4 form-group amount">
+					<label>How much you give</label>
+					<div class="input-group">
+						<span class="input-group-addon">$</span>
+						<input type="text" class="form-control investment-amount" placeholder="Amount" />
+					</div>
 				</div>
-			</div>
 
-			<div class="span4 fund"> 
-				<label class="input-help">Select a fund to put your money towards</label>
-				<select>
-				<% for (var i=0;i<funds.length;i++) { %>
-					<option data-info="<%= funds[i].info %>" value="<%= funds[i].name %>" <%= designation.fund === funds[i].name ? "selected" : "" %>><%= funds[i].name %></option>
-				<% } %>
-				</select>
-				
-			</div>
+				<div class="col-md-4 fund form-group"> 
+					<label>Which fund it goes to</label>
+					<select class="form-control fund-list"></select>
+				</div>
 
-			<div class="span4">
-				<p class="fund-info">Your donation <%= info %>.</p>
-			</div>
+				<div class="col-md-4 form-group">
+					<label>What the fund buys</label>
+					<p class="fund-description"></p>
+				</div>
 
-			<div class="designation-delete tooltip" data-toggle="tooltip" title="Delete this donation" data-placement="right"></div>		
+				<div class="delete-investment tooltip" data-toggle="tooltip" title="Delete this donation" data-placement="right"></div>
+			</div>
 		</script>
 
-		<script type="text/template" id="tpl-cache-review">
-			<h2>Gifts in progress</h2>
-			<p>We loaded up some gifts you were already working on.</p>
-			
-			<table class="table table-striped">
-				<thead>
-					<th>Fund</th>
-					<th>Amount</th>
-				</thead>
-
-				<tbody>
-					<% for (var i=0;i<designations.length;i++) { %>
-						<tr>
-							<td><%= designations[i].fund %></td>
-							<td><%= accounting.formatMoney(designations[i].amount) %></td>
-						</tr>
-					<% } %>
-
-					<tr>
-						<td><strong>Total</strong></td>
-						<td><%= accounting.formatMoney(total) %></td>
-					</tr>
-				</tbody>
-			</table>
+		<script type="text/template" id="tpl-control-bar">
+			<button class="btn add-investment">Add more money</button>
+			<button class="btn btn-success submit-investments">Invest now</button>
+			<span id="gift-total">$0.00</span> ready to invest in exciting ideas.
 		</script>
 	</body>
 </html>
